@@ -1,6 +1,19 @@
-#include <stdlib.h>
-#include <unistd.h>
+#include "config.h"
+
 #include <stdio.h>
+
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
+#endif
+
+#ifdef HAVE_STRING_H
+#include <string.h>
+#endif
+
+#ifdef HAVE_UNISTD_H
+#include <unistd.h>
+#endif
+
 #include <openssl/md5.h>
 
 #include "webauth.h"
