@@ -1,7 +1,15 @@
 
+#include "config.h"
 
-#include <stdlib.h>
 #include <stdio.h>
+
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
+#endif
+
+#ifdef HAVE_STRING_H
+#include <string.h>
+#endif
 
 #include "webauth.h"
 #include "webauthtest.h"
