@@ -1,8 +1,17 @@
-#include <stdlib.h>
+
+#include "config.h"
+
 #include <stdio.h>
 
+#ifdef HAVE_STDLIB_H
+#include <stdlib.h>
+#endif
+
+#ifdef HAVE_STRING_H
+#include <string.h>
+#endif
+
 #include "webauth.h"
-#include "webauthp.h"
 #include "webauthtest.h"
 
 #define BUFSIZE 4096
